--- a/ExamenWPF/MainWindow.xaml
+++ b/ExamenWPF/MainWindow.xaml
@@ -86,8 +86,7 @@
                                 <StackPanel Grid.Row="1">
                                     <TextBlock Text="{Binding Path=Description}"
                                    TextAlignment="Center"
-                                   TextWrapping="Wrap"
-                                   />
+                                   TextWrapping="Wrap"/>
                                     <TextBlock Text="{Binding Path=FilmCompany, StringFormat='Кинокомпания {0}'}"
                                    TextAlignment="Center"
                                                TextWrapping="Wrap"/>
